# BlurImageView

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/skateboard/blurimageviewtest/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/skateboard/blurimageviewtest/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/skateboard/blurimageviewtest/: ExampleUnitTest.kt
blurimageview/: build.gradle
blurimageview/src/androidTest/java/com/skateboard/blurimageview/: ExampleInstrumentedTest.java
blurimageview/src/main/: AndroidManifest.xml
blurimageview/src/main/assets/: fragment.slgl  vertex.slgl
blurimageview/src/main/java/com/skateboard/blurimageview/: BlurImageView.kt  BlurImageViewRender.kt
blurimageview/src/main/jni/: CMakeLists.txt
blurimageview/src/main/jni/cpp/: blurimageview.cpp
blurimageview/src/test/java/com/skateboard/blurimageview/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
